Index page edited in branch emergency

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header>
-        <h1>Single Page Website</h1>
+        <h1>Single Page Website Sangeetha emergency</h1>
     </header>
     <nav>
         <a href="#" onclick="navigateTo('home')">Home</a>
